<?xml version="1.0"?>
<package format="2">
  <name>razor_imu_m0_driver</name>
  <version>1.0.0</version>
  <description>Driver for the SparkFun 9DoF Razor IMU M0 with factory-programmed firmware</description>

  <maintainer email="boulet@ll.mit.edu">Michael T. Boulet</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/razor_imu_m0_driver</url>
  <url type="repository">https://github.com/mitll-ros-pkg/razor_imu_m0_driver</url>
  <url type="bugtracker">https://github.com/mitll-ros-pkg/razor_imu_m0_driver/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
